# EcoCode

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  documentation.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ecocode-profile-repo.yml
benchmarks/fixtures/: bad_code.py  cpu_loop_small.py  good_code.py  list_transform.py  string_workload.py
docs/: ROADMAP.md
implementations/cpp/: README.md
implementations/csharp/: README.md
implementations/rust/: README.md
src/ecocode/: __init__.py  cli.py
src/ecocode/commands/: baseline.py  benchmark.py  optimize.py  profile.py  profile_repo.py  trend.py
src/ecocode/core/: __init__.py  benchmark.py  config.py  history.py  local_llm.py  optimizer.py  profiler.py  repository_profiler.py  sarif.py  schemas.py  trend.py
tests/: test_cli.py  test_config_and_history.py  test_local_llm.py  test_local_llm_robustness.py  test_optimizer_lines.py  test_output_contracts.py  test_profile_repo.py  test_profiler_properties.py  test_runtime_collector.py  test_schema_version_compatibility.py  test_schemas.py  test_static_and_multilang.py  test_trend.py
vscode-extension/: .gitignore  .vscodeignore  README.md  package-lock.json  package.json
vscode-extension/media/: dashboard.css  dashboard.js
vscode-extension/src/: dashboard.ts  ecocodeRunner.ts  extension.ts  suggestions.ts  types.ts
